|Aashish| Added an API to search tweets using a hashtag |

--- a/app/js/config/twitterAuthConfig.json
+++ b/app/js/config/twitterAuthConfig.json
@@ -1,7 +1,7 @@
 {
-	"consumerKey": "xxxx",
-	"consumerSecretKey": "xxxx",
-	"applicationToken": "xxxx",
-	"applicationTokenSecretKey": "xxxx",
-	"callBackUrl": "xxxx"
+	"consumerKey": "",
+	"consumerSecretKey": "",
+	"applicationToken": "",
+	"applicationTokenSecretKey": "",
+	"callBackUrl": ""
 }
